farmadick/assets/css/styles.css
 /*===== GOOGLE FONTS =====*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
/*===== VARIABLES CSS =====*/
:root{
  --header-height: 4rem;

  /*===== Colors =====*/
  --first-color: #ffffff;
  --first-color-dark: #484444;
  --first-color-darken: #000000;
  --white-color: #FCF8F8;
  
  /*===== Font and typography =====*/
  --body-font: 'Poppins', sans-serif;
  --big-font-size: 2.5rem;
  --normal-font-size: .938rem;
  
  /*===== z index =====*/
  --z-fixed: 100;
}

.max-width {
  max-width: 1600px;
}

@media screen and (min-width: 768px){
  :root{
    --big-font-size: 5rem;
    --normal-font-size: 1rem;
  }
}

/*===== BASE =====*/
*,::before,::after{
  box-sizing: border-box;
}

body{
  margin: var(--header-height) 0 0 0;
  padding: 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  font-weight: 500;
}

h1,p,ul{
  margin: 0;
}

ul{
  padding: 0;
  list-style: none;
}

a{
  text-decoration: none;
}

img{
  max-width: 100%;
  height: auto;
}

/*===== LAYOUT =====*/
.bd-grid{
  max-width: 1024px;
  display: grid;
  grid-template-columns: 100%;
  column-gap: 2rem;
  width: calc(100% - 2rem);
  margin-left: 1rem;
  margin-right: 1rem;
}

.l-header{
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--first-color);
}

/*===== NAV =====*/
.nav{
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@media screen and (max-width: 768px){
  .nav__menu{
    position: fixed;
    top: 0;
    right: -100%;
    width: 70%;
    height: 100%;
    padding: 3.5rem 1.5rem 0;
    background: #2fAAA7;
    backdrop-filter: blur(10px);
    transition: .5s;
  }
}

.nav__close{
  position: absolute;
  top: .75rem;
  right: 1rem;
  font-size: 1.5rem;
  cursor: pointer;
}

.nav__item{
  margin-bottom: 2rem;
}

.nav__close, .nav__link, .nav__logo, .nav__toggle{
  color: #000000;
}

.nav__link:hover{
  color: var(--first-color-dark);
}

.nav__toggle{
  font-size: 1.5rem;
  cursor: pointer;
}

/*=== Show menu ===*/
.show{
  right: 0;
}

/*===== HOME =====*/
.home{
  background-color: var(--first-color);
  overflow: hidden;
}

.home__container{
  height: calc(100vh - var(--header-height));
  grid-template-rows: repeat(2, max-content);
  row-gap: 1.5rem;
}

.home__img{
  position: relative;
  padding-top: 1.5rem;
  justify-self: center;
  width: 302px;
  height: 233px;
}

.home__img img{
  position: absolute;
  top: 0;
  left: 0;
}

.home__data{
  color: var(--dark-color);
}

.home__title{
  font-size: var(--big-font-size);
  line-height: 1.3;
  margin-bottom: 1rem;
}

.home__description{
  margin-bottom: 2.5rem;
}

.home__button{
  display: inline-block;
  background-color: var(--first-color-dark);
  color: var(--white-color);
  padding: 1.125rem 2rem;
  border-radius: .5rem;
}

.home__button:hover{
  background-color: var(--first-color-darken);
}

/*
.container-fluid {
background-image: url(../img/banner1.webp);
background-color: none;
background-size: cover;
background-position: left center;
}
*/

.home2_bg  {
  font-size: 5vw !important;
  background-image: url(../img/banner1.webp);
  background-color: none;
  background-size: contain;
  background-position: left center;
  background-repeat: no-repeat;
}

.resizable-text {
  font-size: 1vw !important;
}

.resizable-text-bigger {
  font-size: 2vw !important;

}


hgroup {
  color: #FCF8F8;
  padding: 30% 0;
}


.container-fluid2 {
  padding: 10px;
  background-image: url(../img/banner2.png);
  
  background-size: contain;
  background-repeat: no-repeat;
  
  }

#banner2 {
  color: black;
  padding: 10% 0 30%;
  position: relative;
  bottom: 20%;
  
}

.btn:not(:disabled):not(.disabled) {
  cursor: pointer;
}
.btn-outline-info {
  color: #17a2b8;
  border-color: #17a2b8;
  transition: .5s;
  
}
.btn {
  display: flex;
  font-weight: 400;
  color: #212529;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 2px solid transparent;
  
}



.container-fluid3 {
  background-image: url(../img/banner3.png);
  background-size: contain;
    background-repeat: no-repeat;

}

#banner3 {
  color: #000000;
}




.container-fluid4 {
  background-image: url(../img/banner4.png);
  background-size: cover;
  background-repeat:no-repeat;
  

}

#banner4 {
  color: #000000;
  position: relative;
  top: 23%; 
 
}

/*footer{
  position:relative; 
  background-color: #000000;
  font-size: large;
  color:#2fAAA7 ;
  text-align: center;
  left: 0;
  bottom: 0;
}
   */
/* ======== FORM ========*/
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'poppins', sans-serif;

}


.container {
  width: 100%;
  height: 100vh;
  background: none;
  display: flex;
  align-items: center;
  justify-content: center;

}


form{
  background: #ffffff;
  display: flex;
  flex-direction: column;
  padding: 2vw 4vw;
  width: 90%;
  max-width: 600px;
  border-radius: 10px;
  
}
form h3{
  color: #555;
  font-weight: 800;
  margin-bottom: 20px;

}

form input, form textarea{
  border: 0;
  margin: 10px 0;
  padding: 20px;
  outline: none;
  background: #f5f5f5
  

}

form button{
  padding: 15px;
  background: #2fAAA7;
  color: #fff;
  font-size: 18px;
  border: 0;
  outline: none;
  cursor: pointer;
  width: 150px;
  margin: 20px auto 0;
  border-radius: 30px;
}

/* ======button prova=====*/


/* ===== MEDIA QUERIES =====*/
@media screen and (min-width: 768px){
  body{
    margin: 0;
  }
  
  .nav{
    height: calc(var(--header-height) + 1.5rem);
  }

  .nav__toggle, .nav__close{
    display: none;
  }

  .nav__list{
    display: flex;
  }

  .nav__item{
    margin-left: 3rem;
    margin-bottom: 0;
  }

  .home__container{
    height: 100vh;
    grid-template-columns: repeat(2, max-content);
    grid-template-rows:  1fr;
    row-gap: 0;
    align-items: center;
    justify-content: center;
  }
  
  .home__img{
    order: 1;
   
  }

  .home__img img{
    width: 375px;
  }
}

@media screen and (min-width: 1024px){
  .bd-grid{
    margin-left: auto;
    margin-right: auto;
  }

  .home__container{
    justify-content: initial;
    column-gap: 4.5rem;
  }

  .home__img{
    width: 504px;
    height: 366px;
  }

  .home__img img{
    width: 100%;
  }
}

